Fix overflow

--- a/frontend/src/styles/FakePage.module.css
+++ b/frontend/src/styles/FakePage.module.css
@@ -291,7 +291,7 @@
   margin-block: 2em 0.5em;
   color: black;
   background-color: var(--theme-color);
-  width: max-content;
+  max-width: max-content;
   padding-inline: 8px;
   font-family: var(--ff-narkis-yair);
   font-size: 1.58rem; /* var(--fs-600); */
